--- a/WebCrud/Views/Home/Index.cshtml
+++ b/WebCrud/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Mello Auto Elétrico</h1>
-    <p>Bem-vindo ao sistema de cadastro da loja Mello.</p>
+    <p>Bem-vindo ao sistema de cadastro da loja.</p>
 </div>
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
