--- a/WebCrud/Views/Home/Index.cshtml
+++ b/WebCrud/Views/Home/Index.cshtml
@@ -9,13 +9,13 @@
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="Img/alternador.jpg" class="d-block w-100" alt="...">
+            <img src="~/Img/alternador1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="Img/turbina.webp" class="d-block w-100" alt="...">
+            <img src="~/Img/turbina1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="Img/ventoinha.webp" class="d-block w-100" alt="...">
+            <img src="~/Img/ventoinha1.jpg" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -26,4 +26,25 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
+</div>
+<h1>SOBRE</h1>
+<div class="d-flex flex-row justify-content-between mt-5">
+<div class="card  mt-2" style="width: 18rem;">
+    <img src="~/Img/estator1.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+        <p class="card-text">PEÇAS RECONDICIONADAS: você economiza, gastando pouco com qualidade.</p>
+    </div>
+</div>
+<div class="card mt-2" style="width: 18rem;">
+    <img src="~/Img/eletrica1.webp" class="card-img-top" alt="...">
+    <div class="card-body">
+        <p class="card-text">REVISÃO ELÉTRICA: a revisão de instalações elétricas torna-se essencial. Sua função é identificar alimentadores, circuitos, quadros elétricos.</p>
+    </div>
+</div>
+<div class="card  mt-2" style="width: 18rem;">
+    <img src="~/Img/atendimento1.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+        <p class="card-text">ATENDIMENTO: Não precisa sair de casa, para que seu veiculo seja revisado ou consertado pela nossa equipe.</p>
+    </div>
+</div>
 </div>
