mudando as coisas

--- a/WebCrud/Views/Home/Index.cshtml
+++ b/WebCrud/Views/Home/Index.cshtml
@@ -6,31 +6,16 @@
     <h1 class="display-4">Mello Auto Elétrico</h1>
     <p>Bem-vindo ao sistema de cadastro da loja.</p>
 </div>
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="~/Img/alternador1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="~/Img/turbina1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="~/Img/ventoinha1.jpg" class="d-block w-100" alt="...">
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
-<h1>SOBRE</h1>
+<h2>SOBRE</h2>
+<P>
+    A quase 20 anos de experiência no mercado de Auto Elétrica e  recondicionamento de peças elétricas , atuando desde 2005 na cidade de Carapicuíba e Região com um atendimento diferenciado , com profissionais qualificados.
+    Com uma visão de chegar ao nosso maior objetivo ,que é atender com exeléncia e qualidade e ser referencia em toda a região , nossa missão é ser diferencial nesse segmento.
+    Com princípios e valores somos uma empresa familiar e temos como responsabilidade o atendimento inovador , porque aqui na Mello sua familia é nosso principal cliente.
+</P>
+<h2>ÁREA DE ATUAÇÃO</h2>
 <div class="d-flex flex-row justify-content-between mt-5">
 <div class="card  mt-2" style="width: 18rem;">
-    <img src="~/Img/estator1.jpg" class="card-img-top" alt="...">
+    <img src="~/Img/alternador1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
         <p class="card-text">PEÇAS RECONDICIONADAS: você economiza, gastando pouco com qualidade.</p>
     </div>
