--- a/WebCrud/Views/Home/Index.cshtml
+++ b/WebCrud/Views/Home/Index.cshtml
@@ -2,31 +2,36 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
+<div class="text-center my-5">
     <h1 class="display-4">Mello Auto Elétrico</h1>
     <p>Bem-vindo ao sistema de cadastro da loja.</p>
+    <hr class="my-4" style="border-top: 3px solid #ffc107; width: 700px; margin-left: auto; margin-right: auto;">
 </div>
-<h2>SOBRE</h2>
-<P>
+
+<h2 class="text-center mt-5 mb-3 text-blue-custom">SOBRE</h2>
+<P class="text-center">
     A quase 20 anos de experiência no mercado de Auto Elétrica e  recondicionamento de peças elétricas , atuando desde 2005 na cidade de Carapicuíba e Região com um atendimento diferenciado , com profissionais qualificados.
     Com uma visão de chegar ao nosso maior objetivo ,que é atender com exeléncia e qualidade e ser referencia em toda a região , nossa missão é ser diferencial nesse segmento.
     Com princípios e valores somos uma empresa familiar e temos como responsabilidade o atendimento inovador , porque aqui na Mello sua familia é nosso principal cliente.
 </P>
-<h2>ÁREA DE ATUAÇÃO</h2>
+
+<hr class="my-4" style="border-top: 3px solid #ffc107; width: 700px; margin-left: auto; margin-right: auto;">
+<h2 class="text-center mt-5 mb-4 text-blue-custom">ÁREA DE ATUAÇÃO</h2>
 <div class="d-flex flex-row justify-content-between mt-5">
-<div class="card  mt-2" style="width: 18rem;">
+
+<div class="card  mt-2 mb-4" style="width: 18rem;">
     <img src="~/Img/alternador1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
         <p class="card-text">PEÇAS RECONDICIONADAS: você economiza, gastando pouco com qualidade.</p>
     </div>
 </div>
-<div class="card mt-2" style="width: 18rem;">
+<div class="card mt-2 mb-4" style="width: 18rem;">
     <img src="~/Img/eletrica1.webp" class="card-img-top" alt="...">
     <div class="card-body">
         <p class="card-text">REVISÃO ELÉTRICA: a revisão de instalações elétricas torna-se essencial. Sua função é identificar alimentadores, circuitos, quadros elétricos.</p>
     </div>
 </div>
-<div class="card  mt-2" style="width: 18rem;">
+<div class="card  mt-2 mb-4" style="width: 18rem;">
     <img src="~/Img/atendimento1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
         <p class="card-text">ATENDIMENTO: Não precisa sair de casa, para que seu veiculo seja revisado ou consertado pela nossa equipe.</p>
