--- a/WebCrud/Views/Produto/Cadastrar.cshtml
+++ b/WebCrud/Views/Produto/Cadastrar.cshtml
@@ -4,9 +4,10 @@
     ViewData["Title"] = "Cadastrar";
 }
 
-<h1>Cadastrar</h1>
+<div class="container mt-5">
+    <h1 style="color: #001F3F;">Cadastrar</h1>
 
-<h4>Produto</h4>
+    <h4 style="color: #ffc107;">Produto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
